// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getFormValuesByKoulutus returns correct form values for ammatillinen koulutus 1`] = `
{
  "description": {
    "kuvaus": {
      "fi": "<p>Fi kuvaus</p>",
      "sv": "<p>Sv kuvaus</p>",
    },
    "linkkiEPerusteisiin": {},
    "osaamistavoitteet": {},
  },
  "esikatselu": false,
  "externalId": undefined,
  "information": {
    "eperuste": {
      "value": undefined,
    },
    "erikoistumiskoulutus": {
      "value": "",
    },
    "isAvoinKorkeakoulutus": false,
    "korkeakoulutukset": [],
    "koulutus": {
      "value": "koulutus_371101#1",
    },
    "koulutusalat": [
      {
        "value": "koulutusala_1#1",
      },
      {
        "value": "koulutusala_2#1",
      },
    ],
    "laajuusNumeroTyyppi": "single",
    "luokittelutermit": [
      {
        "label": "term1",
        "value": "term1",
      },
      {
        "label": "term2",
        "value": "term2",
      },
    ],
    "nimi": {
      "fi": "Fi nimi",
      "sv": "Sv nimi",
    },
    "opinnonTyyppi": {
      "value": undefined,
    },
    "opintojenLaajuusNumero": "",
    "opintojenLaajuusNumeroMax": undefined,
    "opintojenLaajuusNumeroMin": undefined,
    "opintojenLaajuusyksikko": {
      "value": "",
    },
    "osaamismerkki": {
      "value": undefined,
    },
    "tunniste": undefined,
    "tutkintonimike": [
      {
        "value": "nimike_1#1",
      },
      {
        "value": "nimike_2#1",
      },
    ],
  },
  "julkinen": true,
  "kieliversiot": [
    "fi",
    "sv",
  ],
  "koulutustyyppi": "amm",
  "lisatiedot": {
    "osioKuvaukset": {
      "osio_1#1": {},
      "osio_2#1": {
        "fi": "<p>Fi kuvaus</p>",
        "sv": "<p>Sv kuvaus</p>",
      },
    },
    "osiot": [
      {
        "value": "osio_1#1",
      },
      {
        "value": "osio_2#1",
      },
    ],
  },
  "organisaatioOid": undefined,
  "osaamisala": null,
  "soraKuvaus": null,
  "tarjoajat": {
    "tarjoajat": [
      "123.456.789",
    ],
  },
  "teemakuva": undefined,
  "tila": "tallennettu",
  "tutkinnonosat": {
    "nimi": {
      "fi": "Fi nimi",
      "sv": "Sv nimi",
    },
    "osat": [],
  },
}
`;

exports[`getFormValuesByKoulutus returns correct form values for erikoistumiskoulutus 1`] = `
{
  "description": {
    "kuvaus": {
      "fi": "<p>Fi kuvaus</p>",
      "sv": "<p>Sv kuvaus</p>",
    },
    "linkkiEPerusteisiin": {},
    "osaamistavoitteet": {
      "fi": "<p>Fi osaamistavoitteet</p>",
      "sv": "<p>Sv osaamistavoitteet</p>",
    },
  },
  "esikatselu": false,
  "externalId": undefined,
  "information": {
    "eperuste": {
      "value": undefined,
    },
    "erikoistumiskoulutus": {
      "value": "erikoistumiskoulutukset_001#2",
    },
    "isAvoinKorkeakoulutus": false,
    "korkeakoulutukset": [],
    "koulutus": {
      "value": undefined,
    },
    "koulutusalat": [
      {
        "value": "koulutusala_1#1",
      },
      {
        "value": "koulutusala_2#1",
      },
    ],
    "laajuusNumeroTyyppi": "range",
    "luokittelutermit": undefined,
    "nimi": {},
    "opinnonTyyppi": {
      "value": undefined,
    },
    "opintojenLaajuusNumero": "",
    "opintojenLaajuusNumeroMax": 10,
    "opintojenLaajuusNumeroMin": 5,
    "opintojenLaajuusyksikko": {
      "value": "",
    },
    "osaamismerkki": {
      "value": undefined,
    },
    "tunniste": undefined,
    "tutkintonimike": [],
  },
  "julkinen": false,
  "kieliversiot": [],
  "koulutustyyppi": "erikoistumiskoulutus",
  "lisatiedot": {
    "osioKuvaukset": {},
    "osiot": [],
  },
  "organisaatioOid": undefined,
  "osaamisala": null,
  "soraKuvaus": null,
  "tarjoajat": {
    "tarjoajat": [],
  },
  "teemakuva": undefined,
  "tila": undefined,
  "tutkinnonosat": {
    "nimi": {},
    "osat": [],
  },
}
`;

exports[`getFormValuesByKoulutus returns correct form values given koulutus 1`] = `
{
  "description": {
    "kuvaus": {
      "fi": "<p>Fi kuvaus</p>",
      "sv": "<p>Sv kuvaus</p>",
    },
    "linkkiEPerusteisiin": {},
    "osaamistavoitteet": {},
  },
  "esikatselu": false,
  "externalId": "ext1",
  "information": {
    "eperuste": {
      "value": undefined,
    },
    "erikoistumiskoulutus": {
      "value": "",
    },
    "isAvoinKorkeakoulutus": false,
    "korkeakoulutukset": [
      {
        "value": "koulutus_371101#1",
      },
      {
        "value": "koulutus_201000#1",
      },
    ],
    "koulutus": {
      "value": undefined,
    },
    "koulutusalat": [
      {
        "value": "koulutusala_1#1",
      },
      {
        "value": "koulutusala_2#1",
      },
    ],
    "laajuusNumeroTyyppi": "single",
    "luokittelutermit": undefined,
    "nimi": {
      "fi": "Fi nimi",
      "sv": "Sv nimi",
    },
    "opinnonTyyppi": {
      "value": undefined,
    },
    "opintojenLaajuusNumero": "",
    "opintojenLaajuusNumeroMax": undefined,
    "opintojenLaajuusNumeroMin": undefined,
    "opintojenLaajuusyksikko": {
      "value": "",
    },
    "osaamismerkki": {
      "value": undefined,
    },
    "tunniste": undefined,
    "tutkintonimike": [
      {
        "value": "nimike_1#1",
      },
      {
        "value": "nimike_2#1",
      },
    ],
  },
  "julkinen": true,
  "kieliversiot": [
    "fi",
    "sv",
  ],
  "koulutustyyppi": "yo",
  "lisatiedot": {
    "osioKuvaukset": {
      "osio_1#1": {},
      "osio_2#1": {
        "fi": "<p>Fi kuvaus</p>",
        "sv": "<p>Sv kuvaus</p>",
      },
    },
    "osiot": [
      {
        "value": "osio_1#1",
      },
      {
        "value": "osio_2#1",
      },
    ],
  },
  "organisaatioOid": undefined,
  "osaamisala": null,
  "soraKuvaus": {
    "value": "1234",
  },
  "tarjoajat": {
    "tarjoajat": [
      "123.456.789",
    ],
  },
  "teemakuva": undefined,
  "tila": "tallennettu",
  "tutkinnonosat": {
    "nimi": {
      "fi": "Fi nimi",
      "sv": "Sv nimi",
    },
    "osat": [],
  },
}
`;
